changed width from 90vw to 100vw, stuck at main slider width issue

--- a/catalog/view/theme/Styleway_Watch/stylesheet/custom_stylesheet.css
+++ b/catalog/view/theme/Styleway_Watch/stylesheet/custom_stylesheet.css
@@ -175,13 +175,35 @@ body {
 }
 
 
+/* bootstrap.min.css -- main theme custom changes */
 
+.header-main,.box,.header-top-inner,.service_container,.block, .czbanners,.banners-slider-carousel {
+   padding-left:3rem!important;
+   padding-right:3rem!important;
+}
+
+.czbanner_container{
+   display: flex!important;
+   justify-content: center;
+}
+
+.footer-blocks{
+   padding-left:3rem!important;
+   padding-right:3rem!important;
+}
 
 /* Home Testimonials */
 #testimonial-carousel .description,#testimonial-carousel .name{
    color: white !important;
 }
 
+/* Home Single Banner Image */
+.home--product--image{
+   height: 85vh;
+   background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.8)),url(https://cdn.shopify.com/s/files/1/0108/8867/5428/t/17/assets/ae15c8a510f1--WhatsApp-Image-2020-09-29-at-2.13.52-PM-1.jpeg?v=1623282008);
+   background-size: cover;
+   background-position: center;
+}
 
 /* products styling starts here */
 
@@ -266,22 +288,23 @@ body {
 .c--flex {
    display: flex;
    margin-top: 1rem;
-   padding: 3rem 0.7rem!important;
+   padding: 2.5rem!important;
    background-color: #333;
    color: white !important;;
 }
 
 .c--flex-text {
-   margin: auto auto;
+   /* margin: auto auto; */
    /* margin-top:-10rem!important; */
-   width: 40vw;
-   
+   /* width: 40vw; */
+   padding-left: 0.5rem!important;
+   padding-right:5rem;
    letter-spacing: 0.05em;
 }
 .c--flex-img {
    display: inline-block;
-   width: 40vw;
-   margin: auto auto;
+   /* width: 40vw; */
+   /* margin: auto auto; */
 }
 .c--flex h2{
    color:white;
@@ -336,21 +359,22 @@ body {
 
    }
    .c--flex {
-      display: block;
-      padding-top:100px!important;
-      padding-bottom:100px!important;
-      padding: 0 !important;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      
+      padding: 3rem 8px !important;
       margin:0!important;
    }
-   .c--flex-text {
-      width: 80vw;
-      padding-top: 6rem!important;
+   .c--flex-text{
+      /* width: 80vw; */
+      
+      padding:2rem!important;
       
    }
    .c--flex-img {
-      width: 80vw;
-      padding-bottom: 6rem!important;
-      /* height: 10%; */
+      padding:2rem;
+      
    }
    .product--flex{
       display: flex;
@@ -419,6 +443,11 @@ body {
       background-size: cover;
       
    }
+}
+
+/* Dont forget to delete those styles */
+.top_button{
+   display: none!important;
 }
 
 
